# libbogo-legacy

./: .gitignore  CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  Charset.py  __init__.py
debian/: changelog  control  copyright  libbogo0.install
src/: CMakeLists.txt  c_interfaces.cpp  cdll_interfaces.cpp  charset.cpp  charset.hpp  engine.cpp  engine.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  test_charset.cpp  test_engine.cpp  test_utils.cpp
